Update .travis.yml to current ruby landscape

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: ruby
-before_install: gem install bundler
-bundler_args: --without yard guard benchmarks
 script: "bundle exec rspec"
 rvm:
   - 1.9.2
@@ -8,16 +6,10 @@ rvm:
   - 2.0.0
   - 2.1.1
   - ruby-head
-  - rbx-19mode
+  - jruby-head
+  - jruby-19mode
 matrix:
-  include:
+  allow_failures:
     - rvm: jruby-19mode
-      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: ruby-head
     - rvm: jruby-head
-      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
-notifications:
-  email:
-    recipients:
-      - arne@arnebrasseur.net
-    on_success: never
-    on_failure: change
