--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: ruby
 script: "bundle exec rspec"
 rvm:
-  - 1.9.2
   - 1.9.3
   - 2.0.0
   - 2.1.1
+  - rbx
+  - jruby
   - ruby-head
   - jruby-head
-  - jruby-19mode
 matrix:
   allow_failures:
-    - rvm: jruby-19mode
+    - rvm: rbx
+    - rvm: jruby
     - rvm: ruby-head
     - rvm: jruby-head
