--- a/spec/yaml/confucius.yaml
+++ b/spec/yaml/confucius.yaml
@@ -8,3 +8,21 @@ works:
     id: 11
     chinese_name: "論語"
     english_name: "Analects"
+    era: !ruby/object:Era
+      id: 99
+      name: "Zhou Dynasty"
+    quotes:
+      - !ruby/object:Quote
+        id: 17
+        chinese: "廄焚。子退朝，曰：“傷人乎？” 不問馬。"
+        english: "When the stables were burnt down, on returning from court Confucius said, “Was anyone hurt?” He did not ask about the horses."
+        sources: "Analects X.11 (tr. Waley), 10–13 (tr. Legge), or X-17 (tr. Lau)"
+      - !ruby/object:Quote
+        id: 18
+        chinese: "子曰：“其恕乎！己所不欲、勿施於人。”"
+        english: "The Master replied: “How about 'reciprocity'! Never impose on others what you would not choose for yourself.”"
+        sources: "Analects XV.24, tr. David Hinton"
+  - !ruby/object:Work
+    id: 12
+    chinese_name: "易經"
+    english_name: "Commentaries to the Yi-jing"
