--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.1
-  - rbx
+  - rbx-2
   - jruby
   - ruby-head
   - jruby-head
 matrix:
   allow_failures:
-    - rvm: rbx
-    - rvm: jruby
+    - rvm: rbx-2
     - rvm: ruby-head
     - rvm: jruby-head
