Settle on a structure for multiple gem repo
Defining rake tasks in the top level Rakefile can be problematic. Seems
the easiest is to give each gem its own Rakefile and have the top one
simply delegate.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ rvm:
   - jruby-head
 env:
   - TASK=yaks:rspec
-  - TASK=yaks:mutant
   - TASK=yaks-html:rspec
-  - TASK=yaks-html:mutant
+  - TASK=mutant
 matrix:
   allow_failures:
     - rvm: ruby-head
