Allow rbx to fail on travis, until this bogus issue gets fixed https://github.com/psyho/bogus/issues/61

--- a/yaks/Rakefile
+++ b/yaks/Rakefile
@@ -13,7 +13,7 @@ task :mutant_chunked do
    Yaks::Config::DSL,
    Yaks::Configurable,
    Yaks::Configurable::ClassMethods,
-   Yaks::DSLBuilder,
+   Yaks::StatefulBuilder,
    Yaks::DefaultPolicy,
    Yaks::FP,
    Yaks::FP::Callable,
