--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
   - 2.0
   - 2.1
   - ruby-head
-  - rbx-2
+  - rbx
   - jruby
   - jruby-head
 env:
@@ -16,6 +16,7 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+    - rvm: rbx
     - env: TASK=mutant
   exclude:
     - rvm: jruby
