Make all types of resources quack alike, add explicit coverage for Control
Also introduces Yaks::Error and some subclasses

--- a/yaks/Rakefile
+++ b/yaks/Rakefile
@@ -5,42 +5,43 @@ gem_tasks(:yaks)
 
 task :mutant_chunked do
   [
-   Yaks::Attributes,
-   Yaks::Attributes::InstanceMethods,
-   Yaks::CollectionMapper,
-   Yaks::CollectionResource,
-   Yaks::Config,
-   Yaks::Config::DSL,
-   Yaks::Configurable,
-   Yaks::Configurable::ClassMethods,
-   Yaks::StatefulBuilder,
-   Yaks::DefaultPolicy,
-   Yaks::FP,
-   Yaks::FP::Callable,
-   Yaks::Format,
-   Yaks::Format::CollectionJson,
-   Yaks::Format::Hal,
-   Yaks::Format::Halo,
-   Yaks::Format::JsonAPI,
-   Yaks::Mapper::AssociationMapper,
-   Yaks::Mapper::Attribute,
-   Yaks::Mapper::Config,
-   Yaks::Mapper::Control,
-   Yaks::Mapper::Control::Field,
-   Yaks::Mapper::HasOne,
-   Yaks::NullResource,
-   Yaks::Primitivize,
-   Yaks::Resource::Link,
-   Yaks::Util,
-   Yaks::Serializer,
-   Yaks::Runner,
-   Yaks::Resource,
-   Yaks::Mapper::Link,
-   Yaks::Mapper::HasMany,
-   Yaks::Mapper::ClassMethods,
-   Yaks::Mapper::Association,
+    Yaks::Attributes,
+    Yaks::Attributes::InstanceMethods,
+    Yaks::CollectionMapper,
+    Yaks::CollectionResource,
+    Yaks::Config,
+    Yaks::Config::DSL,
+    Yaks::Configurable,
+    Yaks::Configurable::ClassMethods,
+    Yaks::StatefulBuilder,
+    Yaks::DefaultPolicy,
+    Yaks::FP,
+    Yaks::FP::Callable,
+    Yaks::Format,
+    Yaks::Format::CollectionJson,
+    Yaks::Format::Hal,
+    Yaks::Format::Halo,
+    Yaks::Format::JsonAPI,
+    Yaks::Mapper::AssociationMapper,
+    Yaks::Mapper::Attribute,
+    Yaks::Mapper::Config,
+    Yaks::Mapper::HasOne,
+    Yaks::Primitivize,
+    Yaks::Resource,
+    Yaks::Resource::Link,
+    Yaks::Util,
+    Yaks::Serializer,
+    Yaks::Runner,
+    Yaks::Mapper::Link,
+    Yaks::Mapper::HasMany,
+    Yaks::Mapper::ClassMethods,
+    Yaks::Mapper::Association,
     Yaks::Mapper,
-#    Yaks::Format::HTML,
+    Yaks::Format::HTML,
+    Yaks::Mapper::Control,
+    Yaks::Mapper::Control::Field,
+#   Yaks::Resource::Control, #no subjects to mutate
+    Yaks::NullResource,
   ].each do |space|
     puts space
     ENV['PATTERN'] = "#{space}"
