Rename control to form. They are essentially HTML5 forms so makes sense
Use the "form" name consistently, e.g. Yaks::Resource::Form,
Yaks::Mapper::Form, etc.

HALO still outputs under a "_controls" key.

Mappers that use "control :foo do" to create forms will see a warning.

--- a/yaks/Rakefile
+++ b/yaks/Rakefile
@@ -38,9 +38,9 @@ task :mutant_chunked do
     Yaks::Mapper::Association,
     Yaks::Mapper,
     Yaks::Format::HTML,
-    Yaks::Mapper::Control,
-    Yaks::Mapper::Control::Field,
-#   Yaks::Resource::Control, #no subjects to mutate
+    Yaks::Mapper::Form,
+    Yaks::Mapper::Form::Field,
+#   Yaks::Resource::Form, #no subjects to mutate
     Yaks::NullResource,
   ].each do |space|
     puts space
