--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0
-  - 2.1.2
-  - 2.1.3
   - 2.1
+  - 2.2
   - ruby-head
   - rbx
   - jruby
@@ -30,4 +29,6 @@ matrix:
     - rvm: jruby
       env: TASK=mutant
     - rvm: jruby-head
+      env: TASK=mutant
+    - rvm: 1.9.3
       env: TASK=mutant
