--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,6 @@ matrix:
       env: TASK=mutant
     - rvm: ruby-head
       env: TASK=mutant
-  exclude:
     - rvm: 1.9.3
       env: TASK=ataru
     - rvm: 2.0
@@ -53,5 +52,5 @@ matrix:
       env: TASK=ataru
     - rvm: rbx
       env: TASK=ataru
-    - rvm: 2.1
+    - rvm: ruby-head
       env: TASK=ataru
