Display top level links for JSON API

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -135,3 +135,6 @@ Style/StringLiterals:
 Style/UnneededPercentQ:
   Exclude:
     - yaks/lib/yaks/breaking_changes.rb
+
+Style/TrailingComma:
+  Enabled: false
