--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,9 +58,7 @@ Metrics/PerceivedComplexity:
 Style/AlignParameters:
   Enabled: false
 
-# Offense count: 102
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle, SupportedStyles, ProceduralMethods, FunctionalMethods, IgnoredMethods.
+# FIXME: should this be normalised to `EnforcedStyle: semantic`?
 Style/BlockDelimiters:
   Enabled: false
 
