--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -96,9 +96,7 @@ Style/EmptyLineBetweenDefs:
 Style/FileName:
   Enabled: false
 
-# Offense count: 24
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle, SupportedStyles.
+# including parametrised modules looks much better without this indentation
 Style/FirstParameterIndentation:
   Enabled: false
 
