--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -148,11 +148,10 @@ Style/ModuleFunction:
 Style/MultilineBlockChain:
   Enabled: false
 
-# Offense count: 14
-# Cop supports --auto-correct.
-# Configuration parameters: PreferredDelimiters.
 Style/PercentLiteralDelimiters:
-  Enabled: false
+  Exclude:
+    - yaks/lib/yaks/breaking_changes.rb
+    - yaks/spec/unit/yaks/config_spec.rb
 
 # Offense count: 2
 # Cop supports --auto-correct.
