--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -168,9 +168,7 @@ Style/SignalException:
 Style/SpaceBeforeBlockBraces:
   Enabled: false
 
-# Offense count: 91
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle, SupportedStyles, EnforcedStyleForEmptyBraces, SpaceBeforeBlockParameters.
+# FIXME: this should be enforced to either space or no_space
 Style/SpaceInsideBlockBraces:
   Enabled: false
 
