--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -179,9 +179,7 @@ Style/SpaceInsideBrackets:
 Style/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
 
-# Offense count: 471
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle, SupportedStyles.
+# FIXME: enforce either single_quotes (fewer fixes) or double_quotes
 Style/StringLiterals:
   Enabled: false
 
