--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -187,10 +187,9 @@ Style/StringLiterals:
 Style/StructInheritance:
   Enabled: false
 
-# Offense count: 5
-# Cop supports --auto-correct.
 Style/UnneededPercentQ:
-  Enabled: false
+  Exclude:
+    - yaks/lib/yaks/breaking_changes.rb
 
 # Offense count: 1
 # Cop supports --auto-correct.
