--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ sudo: false
 script: bundle exec rake $TASK
 
 env:
-  - TASK='yaks:rspec rubocop'
+  - TASK=yaks:rspec
   - TASK=yaks-html:rspec
 
 matrix:
@@ -29,3 +29,5 @@ matrix:
       env: TASK=ataru
     - rvm: 2.2
       env: TASK=mutant
+    - rvm: 2.2
+      env: TASK=rubocop
