RuboCop: enforce persent for format strings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -60,6 +60,9 @@ Style/FileName:
 Style/FirstParameterIndentation:
   Enabled: false
 
+Style/FormatString:
+  EnforcedStyle: percent
+
 Style/GlobalVars:
   Exclude:
     - bench/bench.rb
