Add Rubinius to "allowed failures" on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+    - rvm: rbx
     - env: TASK=mutant
   fast_finish: true
   include:
