Expand the documentation of map_to_primitive
Explain in more detail why you would want to use iso8601, and how.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -136,6 +136,9 @@ Style/SpaceInsideBrackets:
 Style/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
 
+Style/SpaceInsideStringInterpolation:
+  Enabled: false
+
 # FIXME: enforce either single_quotes (fewer fixes) or double_quotes
 Style/StringLiterals:
   Enabled: false
